--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,20 +1,21 @@
 @use "/src/utils";
 
 .Header {
-  --mask: radial-gradient(
-        68.82px at 50% calc(100% - 96px),
-        #000 99%,
-        #0000 101%
-      )
-      calc(50% - 80px) 0/160px 100%,
-    radial-gradient(68.82px at 50% calc(100% + 56px), #0000 99%, #000 101%) 50%
-      calc(100% - 40px) / 160px 100% repeat-x;
-  -webkit-mask: var(--mask);
-  mask: var(--mask);
+  // position: absolute;
+  // --mask: radial-gradient(
+  //       68.82px at 50% calc(100% - 96px),
+  //       #000 99%,
+  //       #0000 101%
+  //     )
+  //     calc(50% - 80px) 0/160px 100%,
+  //   radial-gradient(68.82px at 50% calc(100% + 56px), #0000 99%, #000 101%) 50%
+  //     calc(100% - 40px) / 160px 100% repeat-x;
+  // -webkit-mask: var(--mask);
+  // mask: var(--mask);
 
   /* display: flex; */
   background-color: utils.$lime-100;
-  height: 124px;
+  height: 72px;
   // width: 900px;
   display: flex;
   justify-content: center;
@@ -24,7 +25,6 @@
   @include utils.roboto;
   @include utils.concert-one;
 
-  border: 1px red solid;
   padding-inline: 1rem;
   // font-weight: 100;
 
@@ -39,10 +39,10 @@
 
   font-size: 1.4rem;
   .nav {
-    width: 100%;
+    // width: 100%;
     display: flex;
     align-items: center;
-    width: 22rem;
+    // width: 22rem;
     height: 3.5rem;
     // border-radius: 4px;
     // border: solid 1px utils.$lime-600;
@@ -51,6 +51,14 @@
     display: flex;
     list-style: none;
     gap: 2rem;
+  }
+  .menu__open,
+  .menu__close {
+    display: none;
+    cursor: pointer;
+    color: utils.$lime-900;
+    z-index: 100;
+    // background-color: red;
   }
   .logo__container {
     height: 64px;
@@ -71,5 +79,38 @@
 
     text-decoration: underline utils.$lime-500 5px;
     text-underline-offset: 5px;
+  }
+}
+
+@media (max-width: 620px) {
+  .Header {
+    justify-content: space-between;
+  }
+  .Header .menu__opened {
+    display: none;
+  }
+  .Header .menu__closed {
+    display: flex;
+    // flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100vh;
+    width: 90vw;
+    font-size: 2rem;
+    // width: 100px;
+    // background-color: red;
+    background-color: utils.$lime-100;
+    z-index: 10;
+    opacity: 0.9;
+  }
+  .Header {
+    .menu__close,
+    .menu__open {
+      display: block;
+    }
   }
 }
